codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_input_yields_code_mode_cell.snap
---
source: core/tests/suite/scenarios.rs
expression: snapshot
---
Scenario: Astra continues after new user input yields a running code cell, then waits for its result.

## Window 1
-- request 1 (turn) --
00:additional_tools/developer (3; hash=8ab50c23d722c358):
        - namespace/functions; hash=c46f318747af6284
          - custom/exec
          - function/wait
          - function/request_user_input
          - function/request_user_input_async
        - namespace/clock: Read or wait on time; hash=988ad490c20d3305
          - function/sleep
        - namespace/collaboration: Spawn and manage sub-agents; hash=cfdb23f92902eeb9
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
          - function/wait_agent
01:message/developer:
    Complete the request. Questions only for missing information that changes the work

    Follow applicable AGENTS.md instructions. Supplied ancestors need no rereading. Nested instructions: check where you work

    Preserve unrelated uncommitted changes. Destructive Git commands only with explicit approval

    Active sandbox and approval policy. No bypasses or repackaged rejected commands
02:message/developer[2]:
    [01] <permissions instructions>
        `sandbox_mode`: `read-only`. Reads only. Network access: restricted
        Approval policy: `on-request`. Needed access through command approval parameters, not a separate message...d"` with a short approval question in `justification` [hash=6edee554ee91cf66]

        Only needed access. Approval before destructive actions not authorized by the user. No approval bypasses through other tools

        `prefix_rule`: narrowly scoped reusable capability, usually not the whole command. Never broad interpret...es for destructive commands, heredocs, or herestrings [hash=b27489a8aea81869]

        Shell control operators: independently evaluated segments. Approved prefixes do not authorize whole compound commands. Complex syntax may prevent rule matching
        </permissions instructions>
    [02] <collaboration_mode>Execute the request. Prior collaboration-mode instructions replaced. Mode changes only through a developer `<collaboration_mode>` message

        `request_user_input`, when available: optional questions that materially improve the work, never approva... one concise plain-text question</collaboration_mode> [hash=509c010a092a8d4a]
03:message/developer:
    <multi_agent_role>Role: `/root`. Own the result and coordinate delegated work. Agent messages in analysi... active agent, no new turn. `followup_task`: new turn [hash=98e3a9369209aed0]
    Collaboration tools: direct calls, not inside `functions.exec`. Shared filesystem and working directory. Coordinated edits. Others' changes preserved
    `wait_agent`: waits of minutes preferred over busy polling

    Active-agent limit, including you: 4

    `model` or `reasoning_effort`: only when explicitly requested by the user, AGENTS.md, or skills. Overrid... parent model and effort inherited</multi_agent_role> [hash=4692806a8a393d2c]
04:message/developer:
    <multi_agent_mode>Proactive-delegation guidance replaced. Agent spawning only on explicit request from t...le AGENTS.md or skill instructions</multi_agent_mode> [hash=2474ee6b5769b670]
05:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="managed"><f...ntry></file_system></permission_profile></filesystem> [hash=e8c1de60307d0a3d]
    </environment_context>
06:message/user:
    Check the release status.
-- request 2 (turn) --
07:custom_tool_call/exec:// @exec: {"yield_time_ms": 60000}
    text(await tools.check_release({}));
08:custom_tool_call_output:Script running with cell ID <CELL_ID>

09:message/user:
    Please also highlight the customer impact.
-- request 3 (turn) --
10:function_call/functions.wait:{"cell_id":"<CELL_ID>","yield_time_ms":60000}
11:function_call_output:Release ready
